# AuroraTorrent

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  fix_icon_transparency.py  memory.context  test_rpc.py
.github/workflows/: ci.yml  release.yml
apps/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/ui/src/: App.tsx  index.css  rpc.ts  types.ts
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/icons/: icon.icns  newIcon.png.backup
apps/ui/src-tauri/src/: main.rs
apps/ui/src/components/: AddTorrentModal.tsx  ErrorBoundary.tsx  FilterSidebar.tsx  LibraryGrid.tsx  NowPlayingFooter.tsx  PieceBar.tsx  SettingsModal.tsx  Sidebar.tsx  SpeedGraph.tsx  StatusBar.tsx  Toast.tsx  TorrentDetails.tsx  VideoPlayer.tsx
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: bencode.rs  config.rs  dht.rs  lib.rs  peer.rs  piece.rs  session.rs  storage.rs  torrent.rs  tracker.rs
examples/: sample.torrent
examples/seeder/: Cargo.toml
examples/seeder/src/: main.rs
