[workspace]
members = [
    "crates/engine",
    "crates/bridge",
    "apps/ui/src-tauri",
    "examples/seeder",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"
tempfile = "3.10"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
mainline = "6.0" # DHT
tauri = { version = "1.5", features = [] } # Using stable v1.5 to match workspace members
tauri-build = { version = "1.5", features = [] }

# Note: Workspace uses Tauri v1.5 for stability and consistency.
