[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
librqbit = "5.0" # Check version, assuming 5.0 or similar based on recent search, but I'll use "*" or a safe bet if unsure. Actually, I'll check crates.io via search first or just use a recent version guess and let cargo resolve.
# mainline = "6.0" # Removed as librqbit handles DHT
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"
tempfile = "3.10"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
md5 = "0.7"
urlencoding = "2.1.3"
