[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bridge = { path = "../bridge" }
mainline = "6.0"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
sha1 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors", "fs"] }
md5 = "0.7"
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["stream"] }
url = "2.5"
bytes = "1.5"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec", "io"] }
parking_lot = "0.12"
dashmap = "5.5"
bitvec = "1.0"
dirs = "5.0"
mime_guess = "2.0"
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
