[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
mainline = { workspace = true }
bridge = { path = "../bridge" }
axum-extra = { version = "0.9", features = ["typed-header"] }
urlencoding = "2.1"
url = "2.5"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec", "io"] }
parking_lot = "0.12"
dashmap = "5.5"
bitvec = "1.0"
dirs = "5.0"
mime_guess = "2.0"
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
base64 = "0.22"
