[package]
name = "aurora-torrent"
version = "0.1.0"
description = "AuroraTorrent - A modern BitTorrent client with streaming support"
authors = ["AuroraTorrent Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/AuroraTorrent"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["path-all", "shell-open", "dialog-all", "http-request"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
engine = { path = "../../../crates/engine" }
bridge = { path = "../../../crates/bridge" }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
